@@ -1,3 +1,8 @@
+2007-07-23  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkblt.c: Implementing DND in the selected
+	layouts list. http://bugzilla.gnome.org/show_bug.cgi?id=351936
+
 2007-07-11  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkb.h, gnome-keyboard-properties-xkbpv.c,
